Spelling with Grammarly .md

--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -1,9 +1,9 @@
 ## Git Workflow
-we can configure the git settings to satisfy user's needs.
+we can configure the git settings to satisfy the user's needs.
 
 ### Git has three levels of settings:
 1. system: settings for every user using this computer
-2. gloal: settings of all of my projects
+2. global: settings of all of my projects
 3. local: settings for a specific project
 
 ### Files usually get ignored:
@@ -13,7 +13,7 @@ we can configure the git settings to satisfy user's needs.
 4. Software Dependencies
 
 ### Branches:
-Git uses branches to control versions of files and subdirectories from different users. Sometimes we need a copy of the project to edit and try some services without risking the main project to get corrupted. So, we take a branch or a copy of the project to work on and push it, if it it works properly (minimizing the risk of conflicting versions). Moreover, branches allow us to keep making progress concurrently by testing the code and debugging copies or branches of the code.
+Git uses branches to control versions of files and subdirectories from different users. Sometimes we need a copy of the project to edit and try some services without risking the main project getting corrupted. So, we take a branch or a copy of the project to work on and push it, if it works properly (minimizing the risk of conflicting versions). Moreover, branches allow us to keep making progress concurrently by testing the code and debugging copies or branches of the code.
 
 Each branch should be used for a specific task by a specific person.
 
@@ -26,11 +26,11 @@ Each branch should be used for a specific task by a specific person.
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/d87086c4-6bfb-4a1e-85c2-080edc6fe725)
 
-1. Main is the default name Git provides to project creation branch.
+1. Main is the default name Git provides to the project creation branch.
 2. Took branch from the main called analysis to analyze the data.
-3. After two commits in analysis branch, the report branch got initialized which looks identical to the second commit in analysis branch.
-4. Analysis branch got merged into the main branch (Analysis is the source and Main is the destination).
-5. After two more commits in report branch, we merge it as well into the main branch.
+3. After two commits in the analysis branch, the report branch was initialized which looks identical to the second commit in the analysis branch.
+4. The analysis branch got merged into the main branch (Analysis is the source and Main is the destination).
+5. After two more commits in the report branch, we merge it as well into the main branch.
 
 ### Handling Conflicts:
-Conflicts happen when we try to merge same files from different branches, but the versions in each branch is different. Sometimes, git automatic fixing, which is not always good enough. Then, we need to open the conflicting file to resolve the conflict. This process is okay for simple fixes and differences, but for large conflicts the process gets very intimedating.
+Conflicts happen when we try to merge the same files from different branches, but the versions in each branch are different. Sometimes, git automatic fixing, which is not always good enough. Then, we need to open the conflicting file to resolve the conflict. This process is okay for simple fixes and differences, but for large conflicts, the process gets very intimidating.
