Grammer and Spelling Mistakes

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -5,7 +5,7 @@
 ### 1. Print Working directory:
     pwd
 
-### 2. Returing a list of the files and directories in the current location (working directory):
+### 2. Returning a list of the files and directories in the current location (working directory):
 #### 2.a. Showing the unhidden files and directories
     ls
 #### 2.b. Showing all the files and directories including hidden ones
@@ -17,7 +17,7 @@
 ### 4. Editing a File:
 #### 4.a. nano
     nano [filename]
-This command opens a text editor on the file mentioned. It is used to delete, add or change content of a file.
+This command opens a text editor on the file mentioned. It is used to delete, add, or change the content of a file.
 #### 4.b. echo
     echo "text content" > filename_to_be_created.txt
     echo "text content" >> filename_for_text_to_be_appeneded.txt
@@ -28,7 +28,7 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 ### 5. Checking Git Version:
     git --version
 
-### 6. Saving drafts of ....... into Staging Area:
+### 6. Saving drafts of ....... into the Staging Area:
 #### 6.a. Specific File:
     git add [filename]
 #### 6.b. All Files in the current location:
@@ -38,15 +38,15 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
     git commit -m "log message"
 -m flag allows us to include a log message about our commit, placing it in quotes. This log message is useful for reference, so it is kept short and concise.
 
-### 8. Checking the status of files (which are in Staging Area, and which have changes that are not in the Staging Area yet):
+### 8. Checking the status of files (which are in the Staging Area, and which have changes that are not in the Staging Area yet):
     git status
 
 ### 9. Comparing the last committed version of a file with the ...... :
-#### 9.a. Unstaged Version of the same file:
+#### 9.a. Unstaged version of the same file:
     git diff [unstaged_filename]
 #### 9.b. Staged Version of the same file:
     git diff -r HEAD [staged_filename]
--r flag to look at particular revision of the file. HEAD is a shortcut for the most recenet commit's hash. And the 'git diff -r' will not work without 'HEAD'.
+-r flag to look at a particular revision of the file. HEAD is a shortcut for the most recent commit's hash. And the 'git diff -r' will not work without 'HEAD'.
 #### 9.c. Multiple Staged Versions of the same file:
     git diff -r HEAD
 
@@ -140,7 +140,7 @@ The error here is gender in the first column instead of the second column.
 #### 18.a. list configuration commands
     git config --list
 #### 18.b. Setting email address
-    git config --global user.email example@company.com
+    git config --global user.email [example@company.com]
 #### 18.c. Setting user name
     git config --global user.name "First_Name Last_Name"
 #### 18.d. Aliasing to shorten reset HEAD command to unstage(can be applied to any other)
@@ -151,22 +151,22 @@ The error here is gender in the first column instead of the second column.
 ### 19. Ignoring Specific Files:
 #### 19.1. Create a file called ".gitignore"
     nano .gitignore
-#### 19.2. Within this file write the regex of the file type to be ignored (example: each file ends with .log)
+#### 19.2. Within this file write the regex of the file type to be ignored (for example: each file ends with .log)
     *.log
 
-### 20. Identifying Exisiting Branches:
+### 20. Identifying Existing Branches:
     git branch
-we get a list of branches. In which, we have a branch name perceeded by '*' which is the existing branch.
+we get a list of branches. In which, we have a branch name preceded by '*' which is the existing branch.
 
 ### 21. Creating a Branch:
-    git checkout -b branch_name
+    git checkout -b [branch_name]
 
 ### 22. Switching Branch:
-    git checkout branch_name
+    git checkout [branch_name]
 
 ### 23. The difference between Branches:
-    git diff branch1_name branch2_name
+    git diff [branch1_name] [branch2_name]
 This produces a standard "git diff" output.
 
 ### 24. Merging Branches:
-    git merge source_branch_name destination_branch_name
+    git merge [source_branch_name] [destination_branch_name]
