Grammar and Spelling Mistakes

--- a/Git and Github /1. Introduction to Git.md
+++ b/Git and Github /1. Introduction to Git.md
@@ -1,34 +1,34 @@
 ### Git and GitHub
-Git is a version control program, while github is a cloud-based git repository hosting platform.
+Git is a version control program, while GitHub is a cloud-based git repository hosting platform.
 
 ## Version Control
-1. A version both the content of a file compined with its metadata (author, type, location and when it was last saved).
+1. A version of both the content of a file combined with its metadata (author, type, location, and when it was last saved).
 2. Simultaneous and continuous file development
-3. Being able to see different versions, combine them or revert changes
+3. Being able to see different versions, combine them, or revert changes
 
-Git is a scalable open source version control system that is popular for computer programming and data projects. It is used for:
+Git is a scalable open-source version control system that is popular for computer programming and data projects. It is used for:
 1. Storing everything
 2. Notifying the presence of conflicting content in files
 3. Synchronizing work across different people and computers
 
-The Shell or the terminal is the program for executing commands, in addition to previewing, modifying and inspecting files and directories (folders).
+The Shell or the terminal is the program for executing commands, in addition to previewing, modifying, and inspecting files and directories (folders).
 
 ## Git Project
-It is classified into three parts all in a so called git repository (often refered as 'repo'):
+It is classified into three parts all in a so-called git repository (often referred as 'repo'):
 1. The files which store the information of the project.
 2. The directory which stores the file(s).
-3. The .git directory about the project history (which is a hidden directory that should not be edited). This directory is loacted in the main directory of the repo.
+3. The .git directory about the project history (which is a hidden directory that should not be edited). This directory is located in the main directory of the repo.
 
-#### #Saving a draft = placing in the Staging area.
+#### #Saving a draft = placing it in the Staging area.
 #### #Saving file(s)/updating the repo = executing a commit.
-Staging area is like putting the letter in the envelope, while making a commit is to put this envelope in a mail box. In staging area we can still make changes, while by making a commit we can not change on the version committed, we need to make a new version.
+The 'staging area' is like putting the letter in the envelope while making a 'commit' is to put this envelope in a mailbox. In the staging area we can still make changes, while by making a commit we can not change the version committed, we need to make a new version.
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/2bc84b16-64e1-4171-9250-ab785c727bf2)
 
-In this example we pushed 5 versions of the 'report.md' file into the staging area, but we have only committed 2 of them into the .git directory.
+In this example, we pushed 5 versions of the 'report.md' file into the staging area, but we have only committed 2 of them into the .git directory.
 
 ## Git Workflow:
 1. Modify a file
-2. Save the draft (into staging area)
-3. Commit the updated draft (into .git directory)
+2. Save the draft (into the staging area)
+3. Commit the updated draft (into the .git directory)
 4. Repeat
