Grammar and Spelling Mistakes

--- a/Git and Github /2. Making Changes.md
+++ b/Git and Github /2. Making Changes.md
@@ -5,13 +5,13 @@
 
    ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/c9f3de2c-0cad-4b8d-985a-2588cae4dc90)
 
-* The "56daf65" and other identifiers in the commit part is called "hash". Hash is a 40 character string of numbers and letters, which is produced by git using a hash function (a pseudo-random number generator). Hashes enable Git to share data efficiently between repos. If two files are the same, they will have the same hashes. Therefore, Git can tell what information needs to be saved in which location by comparing hashes rather than entire files.
-* The tree represent the modified files
+* The "56daf65" and other identifiers in the commit part are called "hash". Hash is a 40-character string of numbers and letters, which is produced by git using a hash function (a pseudo-random number generator). Hashes enable Git to share data efficiently between repos. If two files are the same, they will have the same hashes. Therefore, Git can tell what information needs to be saved in which location by comparing hashes rather than entire files.
+* The tree represents the modified files
 * The blob connects the file in the tree with its last modification content
 #### This data can be represented using Git Log.
-#### We run git log to view all commits and note the hashes for commits on the day in question. We only need to note the first six-to-eight characters of the hash. We can then run git show followed by the start of the hash for each commit in turn, until we find the commit we are looking for.
+#### We run a git log to view all commits and note the hashes for commits on the day in question. We only need to note the first six to eight characters of the hash. We can then run git show followed by the start of the hash for each commit in turn until we find the commit we are looking for.
 
 ### The HEAD Command:
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/b1f12102-cc26-4507-8a46-4768b626cef3)
 
-### Sometimes we need to unstage file(s) to commit the rest in the staging area, then stage it/them to work on and commit seperately. This can be acheived through git reset command
+### Sometimes we need to unstage file(s) to commit the rest in the staging area, then stage it/them to work on and commit separately. This can be achieved through the 'git reset' command.
