Update 3. Git Workflows.md

--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -33,4 +33,11 @@ Each branch should be used for a specific task by a specific person.
 5. After two more commits in the report branch, we merge it as well into the main branch.
 
 ### Handling Conflicts:
-Conflicts happen when we try to merge the same files from different branches, but the versions in each branch are different. Sometimes, git automatic fixing, which is not always good enough. Then, we need to open the conflicting file to resolve the conflict. This process is okay for simple fixes and differences, but for large conflicts, the process gets very intimidating.
+Conflicts happen when we try to merge the same files from different branches, but the versions in each branch are different. Sometimes, git automatic fixing, which is not always good enough. Then, we need to open the conflicting file to resolve the conflict. This process is okay for simple fixes and differences, but for large conflicts, the process gets quite intimidating. Finally, git informs us after the conflict is resolved "Already up to date.".
+
+#### To reduce conflicts we should:
+1. Know that prevention is better than cure!
+2. Use each branch for a specific task (as mentioned before).
+3. Avoid editing a file in multiple branches.
+
+We should know that we cannot guarantee we will avoid conflicts, we can just reduce the probability of having one.
