Update 3. Git Workflows.md

--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -41,3 +41,12 @@ Conflicts happen when we try to merge the same files from different branches, bu
 3. Avoid editing a file in multiple branches.
 
 We should know that we cannot guarantee we will avoid conflicts, we can just reduce the probability of having one.
+
+#### Example of an automatically fixed conflict:
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/bab2dffc-f99f-47d1-b209-eaf495874345)
+
+Between "<<<<<<< HEAD" and "=======" is the extra of the source branch. This extra TODO can be removed with the extra lines from the fix like this to solve the conflict:
+
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/57ac3bff-25fb-456b-bab6-15022eea5b7c)
+
+
