Update 3. Git Workflows.md

--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -17,12 +17,12 @@ Git uses branches to control versions of files and subdirectories from different
 
 Each branch should be used for a specific task by a specific person.
 
-#### Example 1:
+#### Example 1 Representing How to Perform a Branch/Task, then Merge:
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/0c33ded1-78a6-4a9c-908a-8cb284fd05bf)
 
 
-#### Example 2:
+#### Example 2 Explaining Branches Workflow:
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/d87086c4-6bfb-4a1e-85c2-080edc6fe725)
 
