Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -128,7 +128,7 @@ The error here is gender in the first column instead of the second column.
 * The changes are lost forever for them being never committed (saved).
 
 ### 17. Cleaning Repositories:
-#### 17.a. See untracked files (never committed, which is very recently created or copied from another project):
+#### 17.a. See untracked files (never committed, which are very recently created or copied from another project):
     git clean -n
 #### 17.b. Delete those files:
     git clean -f
@@ -143,7 +143,7 @@ The error here is gender in the first column instead of the second column.
     git config --global user.email [example@company.com]
 #### 18.c. Setting user name
     git config --global user.name "First_Name Last_Name"
-#### 18.d. Aliasing to shorten reset HEAD command to unstage(can be applied to any other)
+#### 18.d. Aliasing to shorten 'reset HEAD' command to 'unstage'(can be applied to any other)
     git config --global alias.unstage 'reset HEAD'
 #### 18.e. Listing system commands
     git config --system --list
@@ -170,3 +170,7 @@ This produces a standard "git diff" output.
 
 ### 24. Merging Branches:
     git merge [source_branch_name] [destination_branch_name]
+
+------------------------------------------------------------- 4. Collaborating with Git ---------------------------------------------------------------------
+
+
