Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -6,19 +6,19 @@
     pwd
 
 ### 2. Returning a list of the files and directories in the current location (working directory):
-#### 2.a. Showing the unhidden files and directories
+#### 2. a. Showing the unhidden files and directories
     ls
-#### 2.b. Showing all the files and directories including hidden ones
+#### 2. b. Showing all the files and directories including hidden ones
     ls -a
 
 ### 3. Change Directory:
     cd [directory_location]/[directory_name]
 
 ### 4. Editing a File:
-#### 4.a. nano
+#### 4. a. nano
     nano [filename]
 This command opens a text editor on the file mentioned. It is used to delete, add, or change the content of a file.
-#### 4.b. echo
+#### 4. b. echo
     echo "text content" > filename_to_be_created.txt
     echo "text content" >> filename_for_text_to_be_appeneded.txt
 #### Then to:
@@ -29,9 +29,9 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
     git --version
 
 ### 6. Saving drafts of ....... into the Staging Area:
-#### 6.a. Specific File:
+#### 6. a. Specific File:
     git add [filename]
-#### 6.b. All Files in the current location:
+#### 6. b. All Files in the current location:
     git add .
 
 ### 7. Commit our drafts:
@@ -42,12 +42,12 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
     git status
 
 ### 9. Comparing the last committed version of a file with the ...... :
-#### 9.a. Unstaged version of the same file:
+#### 9. a. Unstaged version of the same file:
     git diff [unstaged_filename]
-#### 9.b. Staged Version of the same file:
+#### 9. b. Staged Version of the same file:
     git diff -r HEAD [staged_filename]
 -r flag to look at a particular revision of the file. HEAD is a shortcut for the most recent commit's hash. And the 'git diff -r' will not work without 'HEAD'.
-#### 9.c. Multiple Staged Versions of the same file:
+#### 9. c. Multiple Staged Versions of the same file:
     git diff -r HEAD
 
 #### # The output of an example on a file called report.md:
@@ -62,11 +62,11 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 -------------------------------------------------------------- 2. Making Changes -------------------------------------------------------------------------
 
 ### 10. Selecting the Version for comparison:
-#### 10.a. Last (first most recent) version:
+#### 10. a. Last (first most recent) version:
     git diff -r HEAD [staged_filename]
-#### 10.b. Second most recent version:
+#### 10. b. Second most recent version:
     git diff -r HEAD~1 [staged_filename]
-#### 10.a. Third most recent version:
+#### 10. c. Third most recent version:
     git diff -r HEAD~2 [staged_filename]
 
 ### 11. Comparison of two commits:
@@ -75,13 +75,13 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
     git diff HEAD~1 HEAD~2
 
 ### 12. Getting the Commit Structure:
-#### 12.a. All commits:
+#### 12. a. All commits:
     git log
-#### 12.b. Last N commits:
+#### 12. b. Last N commits:
     git log -[N]
-#### 12.c. For Specific File:
+#### 12. c. For Specific File:
     git log [filename]
-#### 12.d. Restricted to a date:
+#### 12. d. Restricted to a date:
     git log --since='Month Day Year' --until="Month Day Year"
 * Month ---> Three letter abbreviation
 * Day ---> one or two digits
@@ -90,9 +90,9 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 * --until ---> is optional
 
 ### 13. Showing Commit in turn:
-#### 13.a. using 6-8 characters of the hash
+#### 13. a. using 6-8 characters of the hash
     git show [hash]
-#### 13.b using HEAD~
+#### 13. b using HEAD~
     git show HEAD~3
 This command shows the fourth most recent commit.
 #### # The output of an example on a file called mental_health_survey.csv:
@@ -105,21 +105,21 @@ The error here is gender in the first column instead of the second column.
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/79157ef5-7252-4644-9c27-7e46d8f6e57c)
 
 ### 15. Unstaging Files:
-#### 15.a. Single File:
+#### 15. a. Single File:
     git reset HEAD [filename]
-#### 15.b. All Files:
+#### 15. b. All Files:
     git reset HEAD
 
 ### 16. Undo changes to ....... :
-#### 16.a. One unstaged file to the last commit:
+#### 16. a. One unstaged file to the last commit:
     git checkout -- [filename]
-#### 16.b. One unstaged at specific commit:
+#### 16. b. One unstaged at specific commit:
     git chechout [hash] [filename]
 ##### or
     git checkout HEAD~[N] [filename]
-#### 16.c. All unstaged files in the current directory and subdirectories to the last commit:
+#### 16. c. All unstaged files in the current directory and subdirectories to the last commit:
     git checkout .
-#### 16.d. All unstaged files in the current directory and subdirectories at specific commit:
+#### 16. d. All unstaged files in the current directory and subdirectories at specific commit:
     git chechout [hash]
 ##### or
     git checkout HEAD~[N]
@@ -128,24 +128,24 @@ The error here is gender in the first column instead of the second column.
 * The changes are lost forever for them being never committed (saved).
 
 ### 17. Cleaning Repositories:
-#### 17.a. See untracked files (never committed, which are very recently created or copied from another project):
+#### 17. a. See untracked files (never committed, which are very recently created or copied from another project):
     git clean -n
-#### 17.b. Delete those files:
+#### 17. b. Delete those files:
     git clean -f
 ##### # git clean -f cannot be undone.
 
 ----------------------------------------------------------------- 3. Git Workflows -------------------------------------------------------------------------
 
 ### 18. Git Settings Configuration:
-#### 18.a. list configuration commands
+#### 18. a. list configuration commands
     git config --list
-#### 18.b. Setting email address
+#### 18. b. Setting email address
     git config --global user.email [example@company.com]
-#### 18.c. Setting user name
+#### 18. c. Setting user name
     git config --global user.name "First_Name Last_Name"
-#### 18.d. Aliasing to shorten 'reset HEAD' command to 'unstage'(can be applied to any other)
+#### 18. d. Aliasing to shorten the 'reset HEAD' command to be called 'unstage'(can be applied to any other)
     git config --global alias.unstage 'reset HEAD'
-#### 18.e. Listing system commands
+#### 18. e. Listing system commands
     git config --system --list
 
 ### 19. Ignoring Specific Files:
@@ -172,5 +172,17 @@ This produces a standard "git diff" output.
     git merge [source_branch_name] [destination_branch_name]
 
 ------------------------------------------------------------- 4. Collaborating with Git ---------------------------------------------------------------------
+
+### 25. Creating a new repo:
+    git init [repo_name]
+
+### 26. Cloning ......... on a local computer:
+#### 26. a. Local repo:
+    git clone [local_path_to_project_directory] [clone_new_name(optional)]
+#### 26. b. Remote repo:
+    git clone [url_of_project_repo] [clone_new_name(optional)]
+
+
+
 
 
