Update 4. Collaborating with Git.md

--- a/Git and Github /4. Collaborating with Git.md
+++ b/Git and Github /4. Collaborating with Git.md
@@ -17,3 +17,19 @@ At this step, Git will recognize modified untracked unstaged files, you can chec
 ### Avoid Nested Repos
 The nested repos are repositories within some other repositories, because it will create a '.git' file for each repo. For each commit, Git will get confused "which directory to be updated?".
 #### # Generally, nested repos are not necessary except when working on extremely large and complex data projects!
+
+## Working with Remotes
+local repos are repos stored on our computer, while remote repo is a repo stored in the cloud through an online repo hosting service such as GitHub.
+
+### Remote repos are important because:
+* Different computers can be used to access our project from the remote repo, if the local computer breaks down.
+* Colleagues can collaborate with us regardless of their location.
+
+We can copy an existing remote to our computer by cloning them using the 'git clone' command. While remotes can exist locally, it is more common to store them in an online repo hosting service such as GitHub, Bitbucket, or Gitlab. Git stores a remote tag in the new repo's configuration.
+
+When we clone a repo, Git remembers where the original repo was. It does this by storing a remote tag in the new repo's configuration. If we are in a repo, we can list the names of its remotes using git remote.
+
+
+
+
+
