Working with Remotes

--- a/Git and Github /4. Collaborating with Git.md
+++ b/Git and Github /4. Collaborating with Git.md
@@ -29,7 +29,6 @@ We can copy an existing remote to our computer by cloning them using the 'git cl
 
 When we clone a repo, Git remembers where the original repo was. It does this by storing a remote tag in the new repo's configuration. If we are in a repo, we can list the names of its remotes using git remote.
 
-
-
+We can add more remotes by specifying a name for Git to assign. We do this using the git remote add command, and provide two pieces of information - the name that we would like to assign to the remote repo, and the URL, or the path to the directory (if it is a local remote). It is useful to define the remote name as we can use it as a shortcut when merging rather than listing the URL or path.
 
 
