Working with Remotes

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -181,7 +181,18 @@ This produces a standard "git diff" output.
     git clone [local_path_to_project_directory] [clone_new_name(optional)]
 #### 26. b. Remote repo:
     git clone [url_of_project_repo] [clone_new_name(optional)]
+#### # Git automatically name the remotes 'origin' when cloning
 
+### 27. List a Repo's Remotes':
+#### 27. a. Names:
+    git remote
+#### 27. b. URLs
+    git remote -v
+v: verbose
+the output will be two same URLs with fetch or pull at the end.
+
+### 28. Add more remotes by specifying a name to be assigned
+    git remote add [repo_name] [URL/path]
 
 
 
