--- a/Git and Github /4. Collaborating with Git.md
+++ b/Git and Github /4. Collaborating with Git.md
@@ -31,4 +31,13 @@ When we clone a repo, Git remembers where the original repo was. It does this by
 
 We can add more remotes by specifying a name for Git to assign. We do this using the git remote add command, and provide two pieces of information - the name that we would like to assign to the remote repo, and the URL, or the path to the directory (if it is a local remote). It is useful to define the remote name as we can use it as a shortcut when merging rather than listing the URL or path.
 
+## Collaborating on Git Projects
+It is about making the project remote, while each member accessing a branch to do their tasks.
+
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/4a123255-bdc2-457c-a8f6-7159c74b1246)
+
+This results in the remote project having files more than any other local clones; like in the example shown below:
+
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/e6fd422a-56ce-4a78-8def-766eccb42323)
+
 
