Pushing and Pulling Added

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -170,6 +170,7 @@ This produces a standard "git diff" output.
 
 ### 24. Merging Branches:
     git merge [source_branch_name] [destination_branch_name]
+We can use it to synchronize local projects' data with remote projects' data too; which is discussed later.
 
 ------------------------------------------------------------- 4. Collaborating with Git ---------------------------------------------------------------------
 
@@ -194,6 +195,21 @@ the output will be two same URLs with fetch or pull at the end.
 ### 28. Add more remotes by specifying a name to be assigned
     git remote add [repo_name] [URL/path]
 
+#### # remote repo is usually called 'origin' as mentioned before.
+### 29. Fetching from a Remote:
+    git fetch [remote_repo] [local_branch_to_fetch_into]
+
+### 30. Synchronizing Content:
+    git merge [remote_repo] [local_branch_to_synchronize_with]
+
+### 31. Pulling from a Remote Repo(fetch + merge):
+#### 31. a. With a message (recommended):
+    git pull [remote_repo] [local_branch_to_pull_into]
+#### 31. b. Without a messege (not recommended):
+    git pull --no-edit [remote_repo] [local_branch_to_pull_into]
+
+### 32. Pushing into a Remote Repo:
+    git push [remote_repo] [local_branch_to_push_from]
 
 
 
