Pushing and Pulling Explained

--- a/Git and Github /4. Collaborating with Git.md
+++ b/Git and Github /4. Collaborating with Git.md
@@ -27,7 +27,9 @@ local repos are repos stored on our computer, while remote repo is a repo stored
 
 We can copy an existing remote to our computer by cloning them using the 'git clone' command. While remotes can exist locally, it is more common to store them in an online repo hosting service such as GitHub, Bitbucket, or Gitlab. Git stores a remote tag in the new repo's configuration.
 
-When we clone a repo, Git remembers where the original repo was. It does this by storing a remote tag in the new repo's configuration. If we are in a repo, we can list the names of its remotes using git remote.
+When we clone a repo, Git remembers where the original repo was. It does this by storing a remote tag in the new repo's configuration. If we are in a repo, we can list the names of its remotes using git remote. 
+
+#### # Git automatically name the remotes 'origin' when cloning.
 
 We can add more remotes by specifying a name for Git to assign. We do this using the git remote add command, and provide two pieces of information - the name that we would like to assign to the remote repo, and the URL, or the path to the directory (if it is a local remote). It is useful to define the remote name as we can use it as a shortcut when merging rather than listing the URL or path.
 
@@ -36,8 +38,25 @@ It is about making the project remote, while each member accessing a branch to d
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/4a123255-bdc2-457c-a8f6-7159c74b1246)
 
-This results in the remote project having files more than any other local clones; like in the example shown below:
+This results in the remote project having files more than any other local clones or equal to them (best case); like in the example shown below:
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/e6fd422a-56ce-4a78-8def-766eccb42323)
 
+### Pushing and Pulling in Git
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/de2a8348-65e4-4ffa-ac56-849c3f120bcd)
 
+### # It is important to commit (save) data locally, before pulling from or pushing into a remote.
+
+### Example output of a rejected 'git push' command:
+
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/0956aeca-688a-4b5a-a13c-4b51d3dee645)
+
+* Line    1  : shows us the remote repo URL we are trying to push to.
+* Lines  2&3 : show us the outcome of the command - it was rejected and failed.
+* Lines 4-->7: Git provides hints. This is where Git tells us why the command failed, and recommends what we should do to resolve the issue.
+
+In this case, the tip, or the end, of our current branch is behind its remote counterpart (not synchronized with the remote version), and the suggestion is to pull from the remote before trying to push our local changes again.
+
+This can typically occur because while we've been working locally, our colleagues have been pushing their changes to the remote. 
+
+As there are different commits on the local and remote repos, so Git can't just bring them in line with one another. So, when we try to pull, Git will automatically open the nano text editor and ask us to add a message for the merge. We leave a message that we are pulling the latest report from the remote. We can avoid providing a message by including '--no-edit' when executing 'git pull', however, this is not recommended!
