--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -205,7 +205,7 @@ the output will be two same URLs with fetch or pull at the end.
 ### 31. Pulling from a Remote Repo(fetch + merge):
 #### 31. a. With a message (recommended):
     git pull [remote_repo] [local_branch_to_pull_into]
-#### 31. b. Without a messege (not recommended):
+#### 31. b. Without a message (not recommended):
     git pull --no-edit [remote_repo] [local_branch_to_pull_into]
 
 ### 32. Pushing into a Remote Repo:
