Grammar and Spelling Mistakes

--- a/Git and Github /4. Collaborating with Git.md
+++ b/Git and Github /4. Collaborating with Git.md
@@ -1,5 +1,5 @@
 ## Creating Repos
-Because of all the benifits mentioned before (working as team on the same project, saving every version of the work, ... etc.), you will most probably need to create a git repo using the 'git init' command.
+Because of all the benefits mentioned before (working as a team on the same project, saving every version of the work, ... etc.), you will most probably need to create a git repo using the 'git init' command.
 
 ### To check the new repo is working we can:
 #### step 1. Change Directory to the recently created repo:
@@ -8,33 +8,33 @@ Because of all the benifits mentioned before (working as team on the same projec
         git status
 
 ### To convert existing project into a git repo:
-We run the command 'git init' from our project directory, and Git confirms that an empty repo has been created along with providing the location. Like what is shown in this example:
+We run the command 'git init' from our project directory, and Git confirms that an empty repo has been created along with providing the location; like what is shown in this example:
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/617afeb6-ee00-40b2-a89d-f41ce82a602c)
 
-At this step, Git will recognize modified untracked unstaged files, you can check it yourself by using 'git status'. These files can be added to staging area and be made a commit then as any other files.
+At this step, Git will recognize modified untracked unstaged files, you can check it yourself by using 'git status'. These files can be added to the staging area and be made a commit then as any other files.
 
 ### Avoid Nested Repos
-The nested repos are repositories within some other repositories, because it will create a '.git' file for each repo. For each commit, Git will get confused "which directory to be updated?".
+The nested repos are repositories within some other repositories because it will create a '.git' file for each repo. For each commit, Git will get confused "Which directory to be updated?".
 #### # Generally, nested repos are not necessary except when working on extremely large and complex data projects!
 
 ## Working with Remotes
-local repos are repos stored on our computer, while remote repo is a repo stored in the cloud through an online repo hosting service such as GitHub.
+local repos are repos stored on our computer, while remote repos are repos stored in the cloud through an online repo hosting service such as GitHub.
 
 ### Remote repos are important because:
 * Different computers can be used to access our project from the remote repo, if the local computer breaks down.
 * Colleagues can collaborate with us regardless of their location.
 
-We can copy an existing remote to our computer by cloning them using the 'git clone' command. While remotes can exist locally, it is more common to store them in an online repo hosting service such as GitHub, Bitbucket, or Gitlab. Git stores a remote tag in the new repo's configuration.
+We can copy an existing remote to our computer by cloning it using the 'git clone' command. While remotes can exist locally, it is more common to store them in an online repo hosting service such as GitHub, Bitbucket, or Gitlab. Git stores a remote tag in the new repo's configuration.
 
 When we clone a repo, Git remembers where the original repo was. It does this by storing a remote tag in the new repo's configuration. If we are in a repo, we can list the names of its remotes using git remote. 
 
-#### # Git automatically name the remotes 'origin' when cloning.
+#### # Git automatically names the remotes 'origin' when cloning.
 
 We can add more remotes by specifying a name for Git to assign. We do this using the git remote add command, and provide two pieces of information - the name that we would like to assign to the remote repo, and the URL, or the path to the directory (if it is a local remote). It is useful to define the remote name as we can use it as a shortcut when merging rather than listing the URL or path.
 
 ## Collaborating on Git Projects
-It is about making the project remote, while each member accessing a branch to do their tasks.
+It is about making the project remote, while each member accesses a branch to do their tasks.
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/4a123255-bdc2-457c-a8f6-7159c74b1246)
 
@@ -53,7 +53,7 @@ This results in the remote project having files more than any other local clones
 
 * Line    1  : shows us the remote repo URL we are trying to push to.
 * Lines  2&3 : show us the outcome of the command - it was rejected and failed.
-* Lines 4-->7: Git provides hints. This is where Git tells us why the command failed, and recommends what we should do to resolve the issue.
+* Lines 4-->7: Git provides hints. This is where Git tells us why the command failed and recommends what we should do to resolve the issue.
 
 In this case, the tip, or the end, of our current branch is behind its remote counterpart (not synchronized with the remote version), and the suggestion is to pull from the remote before trying to push our local changes again.
 
