Description of the file is added

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -1,5 +1,7 @@
 # Shell Commands
 
+This file includes some git command written in the shell to be executed. Many commands include [ ] with a description in between of what should be written instead of the braces. Hope this is going to be useful!
+
 ------------------------------------------------------------- 1. Introduction to Git ------------------------------------------------------------------------
 
 ### 1. Print Working directory:
